# batche

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml  python-publish.yml  test.yml
batche/: __init__.py  batche.py  lrucache.py
tests/: test_batche.py
