[tool.poetry]
name = "batche"
version = "0.1.0"
description = "batch caching decorator"
authors = ["Gautier Dagan <gautier.dagan@ed.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
