[tool.poetry]
name = "batche"
version = "0.1.0"
description = "batch caching decorator"
authors = ["Gautier Dagan <gautier.dagan@ed.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.7"

[tool.poetry.dev-dependencies]
pre-commit = "^3.2.2"
ruff = "^0.0.263"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.ruff]
ignore = ["F722", "E501"]
