[tool.poetry]
name = "batche"
version = "0.1.1"
description = "batch caching decorator"
authors = ["Gautier Dagan <gautier.dagan@ed.ac.uk>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gautierdag/batche"
repository = "https://github.com/gautierdag/batche"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^3.2.2"
ruff = "^0.0.263"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
select = ["F", "E", "W", "I001"]
ignore = ["F722", "E501"]
